chore(02-02): update environment variables and graceful fallback
- Add TELEGRAM_BOT_TOKEN and TELEGRAM_BOT_USERNAME to .env.local.example
- Add SUPABASE_SERVICE_ROLE_KEY documentation
- Make bot nullable for development without Telegram config
- Handle nullable bot in webhook route with 503 response
- Log warnings instead of throwing when env vars missing

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,14 @@
+# Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+
+# Site URL
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# Telegram Bot Configuration
+# Create a bot via @BotFather in Telegram: /newbot
+# Copy the token provided after creation
+TELEGRAM_BOT_TOKEN=your_bot_token_from_botfather
+# The username shown by BotFather (without the @ symbol)
+TELEGRAM_BOT_USERNAME=your_bot_username_without_at
