--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mendable/firecrawl-js": "^4.11.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.0",
@@ -22,12 +23,14 @@
     "grammy": "^1.39.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
+    "next-themes": "^0.4.6",
     "openai": "^6.16.0",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
   },
